--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
     <img src="assets/img/laptop.jpeg" alt="laptop"/>
 </div>
 
+<div class="d-flex justify-content-around">
+        <div class="riga">
+            <img src="assets/img/laptop.jpeg" alt="laptop"/>
+        </div>
+        <div class="riga">
+            <img src="assets/img/laptop.jpeg" alt="laptop"/>
+        </div>
+        <div class="riga">
+            <img src="assets/img/laptop.jpeg" alt="laptop"/>
+        </div>
+        <div class="riga">
+            <img src="assets/img/laptop.jpeg" alt="laptop"/>
+        </div>
+</div>
+
 </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
